--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
     "lodash": "^4.17.20",
-    "vue": "^3.0.0-beta.1",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.2.1",
+    "vue": "^3.0.5",
     "vue-router": "^4.0.0-alpha.6",
     "vuex": "^4.0.0-alpha.1"
   },
